# alcotest

./: .git-blame-ignore-revs  .gitignore  .merlin  .ocamlformat  .ocamlformat-ignore  .travis.yml  Alcotest.TESTABLE.html  Alcotest.html  Alcotest_version.html  CHANGES  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README  README.md  TODO.txt  _oasis  _tags  alcotest-async.descr  alcotest-async.opam  alcotest-core.opam  alcotest-help.txt  alcotest-js.opam  alcotest-js.opam.template  alcotest-lwt.descr  alcotest-lwt.opam  alcotest-mirage.opam  alcotest.opam  alcotest.opam.template  dune  dune-project  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  (+11 more)
.github/workflows/: build.yml
alcotest/: alcotest.odoc  index-generated.mld  index.html  page-index.odoc
alcotest-async/: alcotest_async.odoc  index-generated.mld  index.html  page-index.odoc
alcotest-async/Alcotest_async/: index.html
alcotest-async/Alcotest_async/V1/: index.html
alcotest-async/Alcotest_async__/: index.html
alcotest-async/Alcotest_async__Alcotest_async_intf/: index.html
alcotest-js/: index.html
alcotest-lwt/: alcotest_lwt.odoc  index-generated.mld  index.html  page-index.odoc
alcotest-lwt/Alcotest_lwt/: index.html
alcotest-lwt/Alcotest_lwt/V1/: index.html
alcotest-lwt/Alcotest_lwt__/: index.html
alcotest-lwt/Alcotest_lwt__Alcotest_lwt_intf/: index.html
alcotest-mirage/: index.html
alcotest-mirage/Alcotest_mirage/: index.html
alcotest-mirage/Alcotest_mirage/Make/: index.html
alcotest/Alcotest/: index.html
alcotest/Alcotest/Cli/: index.html
alcotest/Alcotest/Core/: index.html
alcotest/Alcotest/Monad/: index.html
alcotest/Alcotest/Source_code_position/: index.html
alcotest/Alcotest/Unix/: index.html
alcotest/Alcotest/Unix_platform/: index.html
alcotest/Alcotest/V1/: index.html
alcotest/Alcotest/module-type-TESTABLE/: index.html
alcotest/Alcotest__/: index.html
alcotest/Alcotest__/Cli/: index.html
alcotest/Alcotest__/Core/: index.html
alcotest/Alcotest__/Monad/: index.html
alcotest/Alcotest__/Pp/: index.html
alcotest/Alcotest__/Terminal/: index.html
alcotest/Alcotest__/Utils/: index.html
alcotest/Alcotest__Cli/: index.html
alcotest/Alcotest__Cli/Make/: index.html
alcotest/Alcotest__Cli/module-type-MAKER/: index.html
alcotest/Alcotest__Cli/module-type-S/: index.html
alcotest/Alcotest__Core/: index.html
alcotest/Alcotest__Core/Make/: index.html
alcotest/Alcotest__Core/module-type-MAKER/: index.html
alcotest/Alcotest__Core/module-type-S/: index.html
alcotest/Alcotest__Monad/: index.html
alcotest/Alcotest__Monad/Extend/: index.html
alcotest/Alcotest__Monad/Identity/: index.html
alcotest/Alcotest__Pp/: index.html
alcotest/Alcotest__Terminal/: index.html
alcotest/Alcotest__Utils/: index.html
alcotest/Alcotest__Utils/Fmt/: index.html
alcotest/Alcotest_engine/: index.html
alcotest/Alcotest_engine__/: index.html
alcotest/Alcotest_engine__Cli/: index.html
alcotest/Alcotest_engine__Cli_intf/: index.html
alcotest/Alcotest_engine__Config/: index.html
alcotest/Alcotest_engine__Config_intf/: index.html
alcotest/Alcotest_engine__Core/: index.html
alcotest/Alcotest_engine__Core_intf/: index.html
alcotest/Alcotest_engine__Import/: index.html
alcotest/Alcotest_engine__Log_trap/: index.html
alcotest/Alcotest_engine__Log_trap_intf/: index.html
alcotest/Alcotest_engine__Model/: index.html
alcotest/Alcotest_engine__Monad/: index.html
alcotest/Alcotest_engine__Monad_intf/: index.html
alcotest/Alcotest_engine__Platform/: index.html
alcotest/Alcotest_engine__Pp/: index.html
alcotest/Alcotest_engine__Pp_intf/: index.html
alcotest/Alcotest_engine__Safe_string/: index.html
alcotest/Alcotest_engine__Test/: index.html
alcotest/Alcotest_engine__Utils/: index.html
alcotest/Alcotest_stdlib_ext/: index.html
async/: alcotest_async.ml  alcotest_async.mli  dune  jbuild
doc/: api.odocl
examples/: bad.ml  dune  floats.ml  jbuild  simple.ml
examples/async/: dune  test.ml
examples/bad/: bad.ml  dune
examples/lwt/: dune  test.ml
lib/: META  alcotest.ml  alcotest.mldylib  alcotest.mli  tags
lwt/: alcotest_lwt.ml  alcotest_lwt.mli  dune  jbuild
pkg/: META  pkg.ml
src/: alcotest.ml  alcotest.mli  cli.ml  cli.mli  core.ml  core.mli  dune  jbuild  monad.ml  monad.mli  terminal.ml  terminal.mli
src/alcotest/: alcotest.ml  alcotest.mli  alcotest_stubs.c  cli.ml  cli.mli  core.ml  core.mli  dune  monad.mli  output.ml  output.mli  platform.ml  platform.mli  pp.ml  pp.mli  runtime.js  utils.ml  utils.mli
src/alcotest-async/: alcotest_async.ml  alcotest_async.mli  alcotest_async_intf.ml  dune
src/alcotest-core/: alcotest_core.ml  alcotest_core.mli  cli.ml  cli.mli  core.ml  dune  monad.mli  platform.ml  platform.mli  test.ml  test.mli
src/alcotest-engine/: alcotest_engine.ml  alcotest_engine.mli  callsite_loc.412.ml  cli.ml  cli.mli  cli_intf.ml  config.ml  config_intf.ml  core.ml  core.mli  core_intf.ml  distance.ml  distance.mli  dune  filter.ml  filter.mli  formatters.mli  global.ml  log_trap.ml  log_trap_intf.ml  model.ml  model.mli  monad.ml  monad.mli  monad_intf.ml  platform.ml  platform.mli  pp.ml  pp.mli  pp_intf.ml  safe_string.ml  safe_string.mli  tag.ml  tag.mli  test.ml  test.mli  utils.ml  utils.mli
src/alcotest-lwt/: alcotest_lwt.ml  alcotest_lwt.mli  alcotest_lwt_intf.ml  dune
src/alcotest-mirage/: alcotest_mirage.ml  alcotest_mirage.mli  dune
src/alcotest-stdlib-ext/: alcotest_stdlib_ext.ml  alcotest_stdlib_ext.mli  dune
src/cli/: alcotest_cli.ml  alcotest_cli.mli  dune
test/e2e/: dune  expect_failure.ml  gen_dune_rules.ml  strip_randomness.ml
test/e2e/alcotest-async/failing/: dune  dune.inc  exceptions.expected  exceptions.ml
test/e2e/alcotest-lwt/passing/: cli_options.expected  cli_options.ml  dune  dune.inc
test/e2e/alcotest/inside-dune/: color-default.expected  color-overridden.expected  dune  test_color.ml
test/e2e/alcotest/source_code_position/: caml_ld_library_path.ml  dune
(+487 files in other folders)
