opam-version: "2.0"
maintainer:  "thomas@gazagnaire.org"
authors:     "Thomas Gazagnaire"
homepage:    "https://github.com/mirage/alcotest/"
dev-repo:    "git+https://github.com/mirage/alcotest.git"
bug-reports: "https://github.com/mirage/alcotest/issues/"
license:     "ISC"
doc:         "https://mirage.github.io/alcotest/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune"  {build}
  "ocaml" {>= "4.02.3"}
  "alcotest"
  "lwt" "logs"
]

synopsis: "Lwt-based helpers for Alcotest"
