opam-version: "1.2"
maintainer: "thomas@gazagnaire.org"
authors:     "Thomas Gazagnaire"
homepage:    "https://github.com/mirage/alcotest/"
dev-repo:    "https://github.com/mirage/alcotest.git"
bug-reports: "https://github.com/mirage/alcotest/issues/"
license:     "ISC"
doc:         "https://mirage.github.io/alcotest/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "dune"  {build & >= "1.1.0"}
  "fmt"   {>= "0.8.0"}
  "astring"
  "result"
  "cmdliner"
  "uuidm"
  "fpath"
]
available: [ocaml-version >= "4.02.3"]
